[metadata]
name = dreamchaser
version = 0.1.0
description = A Jianhua Wu project
long_description = file: README.rst
long_description_content_type = text/markdown

author = Jianhua Wu
author_email = jianhua.wu@dreamchaser.one

license = MIT
url = https://dreamchaser.one

classifiers =
        Development Status :: 1 - Planning
        Intended Audience :: Dreamchasers
        Programming Language :: Python :: 3 :: Only
        Programming Language :: Python :: 3.6
        Programming Language :: Python :: 3.7
        Programming Language :: Python :: 3.8
        Programming Language :: Python :: 3.9
        License :: OSI Approved :: MIT License
        Topic :: Software Development :: Code Generators
        Topic :: Utilities
        Operating System :: Unix
        Operating System :: MacOS
    ]


[options]
packages = find_namespace:
package_dir = 
	=dreamchaser
python_requires = >=3.6
install_requires = 
        aws-cdk.core==1.121.0
        boto3==1.18.35

[options.packages.find]
where = dreamchaser
