[metadata]
name = Jenkins
version = 0.1.0
description = A Jianhua Wu project
long_description = file: README.md
long_description_content_type = text/markdown

author = Jianhua Wu
author_email = jianhua.wu@dreamchaser.one

license = MIT
url = https://dreamchaser.one

classifiers =
        Development Status :: 1 - Planning
        Intended Audience :: Dreamchasers
        License :: OSI Approved :: MIT License
        Natural Language :: English
        Programming Language :: Python :: 3 :: Only
        Programming Language :: Python :: 3.6
        Programming Language :: Python :: 3.7
        Programming Language :: Python :: 3.8
        Programming Language :: Python :: 3.9
        Operating System :: Microsoft :: Windows
        Operating System :: MacOS :: MacOS X
        Operating System :: POSIX :: Linux
        Topic :: Software Development :: Code Generators
        Topic :: Utilities

    ]


[options]
packages = find_namespace:
package_dir = 
	=dreamchaser
python_requires = >=3.6
install_requires = 
        aws-cdk-lib==2.0.0-rc.21
        constructs>=10.0.0,<11.0.0
        boto3>=1.18.35

[options.packages.find]
where = dreamchaser
